log/build_2025-02-19_23-36-11/me495_yolo/stderr.log
  File "/home/catherine-maglione/yolo_backup/install/me495_yolo/lib/python3.12/site-packages/me495_yolo/waypoint.py", line 895
    return transformed_waypoints
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'return' outside function

